--- a/.github/workflows/check-patch.yml
+++ b/.github/workflows/check-patch.yml
@@ -68,7 +68,7 @@ jobs:
           FF_VERSION: "20230101"
           FF_ARCHIVE_TYPE: "tar.xz"
         run: |
-          sudo apt install libjpeg-dev libtiff5-dev libpng-dev libfreetype6-dev libgif-dev libgtk-3-dev libxml2-dev libpango1.0-dev libcairo2-dev libspiro-dev python3-dev ninja-build cmake build-essential gettext libuninameslist-dev libgtkmm-3.0-dev -y -q
+          sudo apt install libjpeg-dev libtiff5-dev libpng-dev libfreetype6-dev libgif-dev libgtk-3-dev libxml2-dev libpango1.0-dev libcairo2-dev libspiro-dev python3-dev ninja-build cmake build-essential gettext libuninameslist-dev libgtkmm-3.0-dev debhelper dh-make -y -q
           #curl -L "https://github.com/fontforge/fontforge/releases/download/${{ env.FF_VERSION }}/fontforge-${{ env.FF_VERSION }}.${{ env.FF_ARCHIVE_TYPE }}" \
           #  --output "FontForge.${{ env.FF_ARCHIVE_TYPE }}"
           git clone https://github.com/fontforge/fontforge
